--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
-<p>First paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Arcu cursus vitae congue mauris. In nisl nisi scelerisque eu ultrices vitae auctor eu augue. Nisi est sit amet
-facilisis magna. Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Quis ipsum suspendisse ultrices
-gravida dictum fusce ut. Euismod elementum nisi quis eleifend. Habitant morbi tristique senectus et. Amet nisl suscipit
-adipiscing bibendum est ultricies integer. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Nisi quis
-eleifend quam adipiscing. Neque convallis a cras semper auctor neque vitae. Magna fermentum iaculis eu non. Vivamus arcu
-felis bibendum ut tristique et. Justo nec ultrices dui sapien eget mi. In vitae turpis massa sed elementum tempus. Eu
-facilisis sed odio morbi quis commodo. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae.</p>
+<!DOCTYPE html>
+<html>
 
-<p>Second paragraph. Suscipit adipiscing bibendum est ultricies. Tortor aliquam nulla facilisi cras fermentum. Eget aliquet nibh praesent
-tristique magna. In hac habitasse platea dictumst vestibulum. Ornare quam viverra orci sagittis eu. Sit amet est
-placerat in. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Turpis in eu mi bibendum neque egestas
-congue. Enim eu turpis egestas pretium aenean pharetra magna ac placerat. Ultrices sagittis orci a scelerisque purus
-semper eget duis at. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Condimentum
-lacinia quis vel eros donec ac odio.</p>
+    <head>
+        <title>Гаєва Поліна ІО-13</title>
+        <meta name="description" content="Lab1">
+        <meta name="keywords" content="HTML">
+    </head>
 
-<p>Third paragraph. Nisl purus in mollis nunc sed id semper risus. Ipsum a arcu cursus vitae congue mauris rhoncus aenean. Ridiculus mus
-mauris vitae ultricies leo integer malesuada nunc. In tellus integer feugiat scelerisque. Lectus mauris ultrices eros in
-cursus turpis massa. Sollicitudin ac orci phasellus egestas. Massa massa ultricies mi quis hendrerit dolor. Quam
-elementum pulvinar etiam non quam lacus suspendisse faucibus interdum. Iaculis nunc sed augue lacus viverra. Id ornare
-arcu odio ut sem nulla pharetra. Amet luctus venenatis lectus magna fringilla urna porttitor. Eu nisl nunc mi ipsum
-faucibus vitae aliquet nec ullamcorper. Nunc mattis enim ut tellus elementum sagittis. Mauris augue neque gravida in
-fermentum et sollicitudin. Pellentesque habitant morbi tristique senectus. Tristique senectus et netus et. Turpis
-egestas sed tempus urna et pharetra pharetra. Feugiat vivamus at augue eget arcu dictum varius duis at. Lacus sed
-viverra tellus in hac habitasse platea dictumst vestibulum. Nisl condimentum id venenatis a condimentum vitae sapien.</p>
+    <body>
+        <p><h2>Гаєва Поліна Денисівна</h2></p>
+        <p>Місце народження:16.05.2004,м.Донецьк</p>
+        <p>Освіта:СШ №135 м.Київ / НТУУ "КПІ"</p>
+
+        <p>Хоббі:</p>
+        <ul>
+            <li>Волейбол</li>
+            <li>Художня гімнастика</li>
+            <li>Малювання</li>
+        </ul>
+
+        <p>Улюблені книги:</p>
+        <ol>
+            <li>Тріумфальна арка</li>
+            <li>На Західному фронті без змін</li>
+            <li>Фестиваль нікчемності</li>
+        </ol>
+
+        <p> Барсело́на — місто в Іспанії, столиця автономної області Каталонії і провінції Барселона.
+            У місті площею 100,4 км² проживає 1 611 822 жителі (2013). Агломерація Барселони (місто та його передмістя) налічує 4 604 000 осіб (2013)[12]. 
+            Місто є другим за чисельністю населення в Іспанії після столиці Мадрида.
+            Барселона лежить на частині узбережжя Середземного моря (кат. la costa de la mar Mediterrània), що називається Коста-дель-Маресме, на північ від Коста-Брава і на півдні від Коста-дель-Гарраф. 
+            Це важливий морський порт. Місто за 160  км від Піренеїв. У Барселоні відбувалися Всесвітні виставки у 1888 та 1929 роках, літні Олімпійські ігри 1992 року, Всесвітній форум культур у 2004 році та інші заходи світового рівня. 
+        </p>
+
+        <img src="https://s3.eu-central-1.amazonaws.com/aviata-blog-2.0/posts/thumbnails/0_8a3c6499c5882162225bc3cfdaaa2ff1797d1737.webp" alt="Barcelona">
+        <p></p>
+        <a href="https://www.barcelonaturisme.com/wv3/en/" target="_blank">Barcelona</a>
+    </body>
+
+</html> 
