--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <p><h2>Гаєва Поліна Денисівна</h2></p>
+        <h2>Гаєва Поліна Денисівна</h2>
         <p>Місце народження:16.05.2004,м.Донецьк</p>
         <p>Освіта:СШ №135 м.Київ / НТУУ "КПІ"</p>
 
